# fintech-brain

./: .env.example  .gitignore  Docker部署注意事项.md  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  magic-pdf.json  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  deps.py  main.py
backend/app/agents/: graph.py  state.py
backend/app/agents/nodes/: knowledge_graph.py  research.py  response.py  retrieval.py  risk_control.py  router.py
backend/app/agents/tools/: calculator.py  kg_tool.py  search_tool.py
backend/app/api/: auth.py  chat.py  dashboard.py  documents.py  knowledge.py
backend/app/core/: database.py  logging.py  rate_limit.py  redis.py  security.py
backend/app/knowledge_graph/: extractor.py  neo4j_client.py  queries.py
backend/app/models/: __init__.py  conversation.py  document.py  user.py
backend/app/parser/: mineru_parser.py
backend/app/rag/: bm25.py  embeddings.py  milvus_client.py  reranker.py  retriever.py
backend/app/schemas/: auth.py  chat.py  document.py
backend/app/services/: auth_service.py  cache_service.py  chat_service.py  document_service.py
backend/data/: kg_triples.json  rag_documents.json  research_report_list.csv  sample_reports.json
docs/: index.html
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/api/: auth.js  chat.js  document.js  request.js
frontend/src/router/: index.js
frontend/src/stores/: chat.js  user.js
frontend/src/utils/: index.js
frontend/src/views/: Chat.vue  Dashboard.vue  Documents.vue  KnowledgeGraph.vue  Login.vue  (+1 more)
