[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-brain"
version = "0.1.0"
description = "智能金融投研与风控大脑"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.0.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "aiomysql>=0.2.0",
    "alembic>=1.13.0",
    # Redis
    "redis[hiredis]>=5.0.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.1",
    # LLM & Agent
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    # RAG
    "pymilvus>=2.4.0",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    # Knowledge Graph
    "neo4j>=5.0.0",
    # File I/O
    "aiofiles>=23.2.0",
    # Document Parsing
    "magic-pdf[full]>=0.7.0",
    # Config
    "pydantic-settings>=2.0.0",
    # Logging
    "loguru>=0.7.0",
    # HTTP Client
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]
